actualizacion con responsive

--- a/people/src/vistas/pagina.html
+++ b/people/src/vistas/pagina.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="apariencias/estilo.css" type="text/css">
+    <link rel="stylesheet" href="../public/css/estilo.css" type="text/css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -54,7 +54,7 @@
             </div>
 
             <div class="col" style="background-color:rgba(137, 43, 226, 0);">        
-                <img class="circular--square" src="./imagenes/images (1).png" />
+                <img class="circular--square" src="../public/img/images (1).png" />
                 <h1 class="Sub-titulo" style="font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif"> Descripción</h1>
                 <h2 class="sub-contenido" style="font-family:Arial, Helvetica, sans-serif" >Que tal? aqui puedes hablar acerca de ti.</h2>
             </div>
@@ -101,9 +101,9 @@
                 <div class="col" style="background-color: rgba(17, 185, 101, 0);">
                     <div class="carrusel">
                         <ul class="carrusel-fotos">
-                          <li id="foto1"><img src="./imagenes/37OWRM2CLBAE7BP5SXKLVMNHZE.jpg" alt=""></li>
-                          <li id="foto2"><img src="./imagenes/1654266929_684931_1654267911_noticia_normal.jpg" alt=""></li>
-                          <li id="foto3"><img src="./imagenes/1634842.png" alt=""></li>
+                          <li id="foto1"><img src="../public/img/37OWRM2CLBAE7BP5SXKLVMNHZE.jpg" alt=""></li>
+                          <li id="foto2"><img src="../public/img/1654266929_684931_1654267911_noticia_normal.jpg" alt=""></li>
+                          <li id="foto3"><img src="../public/img/1634842.png" alt=""></li>
                         </ul>
                         <ul class="carrusel-menu">
                           <li><a href="#foto1"><img src="img/foto1.jpg" alt=""></a></li>
