--- a/people/src/vistas/register.html
+++ b/people/src/vistas/register.html
@@ -7,9 +7,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>foutos art</title>
 </head>
-<link rel="stylesheet" href="../public/css/login_style.css">
+<link rel="stylesheet" href="../public/css/register_style.css">
 <body>
-    
+    <div class="slider">
+
+        <ul>
+            <li><img src="imagen4.jpeg" alt=""></li>
+            <li><img src="imagen 3.png" alt=""></li>
+            <li><img src="imagen2.jpg" alt=""></li>
+            <li><img src="imagen1.jpg" alt=""></li>
+            <li><img src="imagen4.jpeg" alt=""></li>
+            <li><img src="imagen1.jpg" alt=""></li>
+            <li><img src="imagen2.jpg" alt=""></li>
+            <li><img src="imagen 3.png" alt=""></li>
+        </ul>
+
+    </div>
     <header>
     
 
