--- a/people/src/vistas/vista_7.html
+++ b/people/src/vistas/vista_7.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-	<head>
+	<head >
 		<title>Vista para subir fotos </title>
-		<link rel="stylesheet" type="text/css" href="stilo.css.css">
+		<link rel="stylesheet" href="../public/css/stilo.css" type="text/css">
 
 	</head>
    		<body>
