--- a/people/src/vistas/pagina.html
+++ b/people/src/vistas/pagina.html
@@ -12,6 +12,40 @@
     <title>Profile</title>
     
 </head>
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="../public/css/Global.css">
+  <link rel="stylesheet" href="../public/css/menu.css">
+</head>
+<header>
+  <div class="Bar_menu">
+      <div class="picture">
+          <a href=""> <img src="/people/src/public/img/foutos.png" alt="foto" height="40px"></a>
+      </div>
+      <div class="central">
+          <div>
+              <button> comunidad</button>
+              <button> Trending</button>
+              <button> category</button>
+          </div>
+      </div>
+      <a href="">
+      <div class="login">
+              <div>
+                <h2>asdasd</h2>
+              </div>
+              <div> <img src="https://storage.googleapis.com/uscimages/account.png" alt="" height="35px"></div>
+
+          
+
+      </div>
+       </a>
+  </div>
+</header>
 <body>
     <div class="container">
         <div class="row">
