--- a/people/src/vistas/vista_6.html
+++ b/people/src/vistas/vista_6.html
@@ -5,40 +5,30 @@
 		<link rel="stylesheet" href="../public/css/style.css" type="text/css">
 
 	</head>
-   		<body>
-			<nav>
-				<ul class="menu-horizontal">
-					<li><a href="#">FOUTUS</a></li>
-					<li><a href="#">ART</a></li>
-					<li><a href="#">Community</a></li>
-					<li><a href="#">Trending</a></li>
-					<li>
-						<a href="#">Categoria</a>
-						<ul class="menu-vertical">
-
-							<li><a href="#">Belleza</a></li>
-							<li><a href="#">Deporte</a></li>
-							<li><a href="#">Artistas</a></li>
-							<li><a href="#">Publicidad</a></li>
-							<li><a href="#">Moda</a></li>
-
-						</ul>
-					</li>
-		
-				</ul>
-                
-			</nav>
-
+   		<body>			
+	<div class="image" >
+		<br><br>
+		<br><br>
+		<br><br>
+		<br><br>
+		<br><br>
+		<br><br>
+		<img src="../public/img/WhatsApp Image 2023-01-04 at 00.17.20.jpeg"  width="900" height="700"> </a></div>
+			<div class="contenido">
+			
             <div class="articulos">
 
             <div class="menu-secundario">
                 <a href=""> <img src="../public/img/WhatsApp Image 2023-01-03 at 22.41.57.jpeg"> </a>
-                <a href="">ALEXIS</a>
-                <a href="">PARQUE2</a>
-                <a href="">PARQUE3</a>
-                <a href="">PARQUE4</a> 
-                <a href="">PARQUE5</a> 
+                <a>PABLO ALEXIS ERAZO NUÑEZ</a>
+                <a>NOMBRE DE LA FOTO:</a>
+                <a>ESCRIBE UN COMENTARIO:</a>
+				<form action=""><input type="text" class="field"></form>
+				<br/>
+				 <a href="">POSTEAR</a> 
+                <a>COMENTARIOS:</a> 
             </div>
         </div>
+		</div>
             </body>
             </html>    
