--- a/people/src/vistas/vista_7.html
+++ b/people/src/vistas/vista_7.html
@@ -5,42 +5,28 @@
 		<link rel="stylesheet" href="../public/css/stilo.css" type="text/css">
 
 	</head>
-	
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="../public/css/Global.css">
-    <link rel="stylesheet" href="../public/css/menu.css">
-</head>
-<header>
-    <div class="Bar_menu">
-        <div class="picture">
-            <a href=""> <img src="/people/src/public/img/foutos.png" alt="foto" height="40px"></a>
-        </div>
-        <div class="central">
-            <div>
-                <button> comunidad</button>
-                <button> Trending</button>
-                <button> category</button>
-            </div>
-        </div>
-        <a href="">
-        <div class="login">
-                <div>
-                  <h2>asdasd</h2>
-                </div>
-                <div> <img src="https://storage.googleapis.com/uscimages/account.png" alt="" height="35px"></div>
-
-            
-
-        </div>
-         </a>
-    </div>
-</header>
    		<body>
+			<nav>
+				<ul class="menu-horizontal">
+					<li><a href="#">FOUTUS</a></li>
+					<li><a href="#">ART</a></li>
+					<li><a href="#">Community</a></li>
+					<li><a href="#">Trending</a></li>
+					<li>
+						<a href="#">Categoria</a>
+						<ul class="menu-vertical">
+
+							<li><a href="#">Belleza</a></li>
+							<li><a href="#">Deporte</a></li>
+							<li><a href="#">Artistas</a></li>
+							<li><a href="#">Publicidad</a></li>
+							<li><a href="#">Moda</a></li>
+
+						</ul>
+					</li>
 		
+				</ul>
+			</nav>
 		<form>
 
 			<form action="">
