--- a/people/src/vistas/menu.html
+++ b/people/src/vistas/menu.html
@@ -1,10 +1,10 @@
 <div class="Bar_menu">
     <div class="picture">
-        <a href=""> <img src="/people/src/public/img/foutos.png" alt="foto" height="40px"></a>
+        <a href="../vistas/inicio.html"> <img src="/people/src/public/img/foutos.png" alt="foto" height="40px"></a>
     </div>
     <div class="central">
         <div>
-            <button> comunidad</button>
+            <a href="../vistas/comunidad.html"><button>Comunidad</button></a>
             <button> Trending</button>
             <button> category</button>
         </div>
@@ -48,15 +48,15 @@
     </div>
     <div class="slider_two">
         <div>
-            <a href="">usuario</a>
+            <a href="../vistas/profile.html">usuario</a>
 
         </div>
         <div>
-            <a href="">configuracion</a>
+            <a href="../vistas/configuracion_usuario.html">configuracion</a>
 
         </div>
         <div>
-            <a href="">upload</a>
+            <a href="../vistas/subir_imagen.html">upload</a>
 
         </div>
         <div>
