agregado de bordes a los formularios e imagen de perfil

--- a/people/src/vistas/pagina2.html
+++ b/people/src/vistas/pagina2.html
@@ -54,7 +54,7 @@
                 <h1 style= "color: antiquewhite;font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif"> Descripción</h1>
                 <h2 style= "color:antiquewhite;font-family:Arial, Helvetica, sans-serif" >Que tal? aqui puedes hablar acerca de ti.</h2>
             </div>
-            <div class="col" style= "margin: 20px;background-color: rgba(9, 131, 179, 0.459);">
+            <div class="col" style= "border-color: lightseagreen;border-style: groove;margin: 20px;background-color: rgba(9, 131, 179, 0.459);">
               
                 <h1 style=  "font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif"> Profile</h1>
 
@@ -68,7 +68,7 @@
                     </div>
                     <br>
                     <div class="form-group">
-                        <label for="country">País:</label>
+                        <label style="font-family:Impact" for= "country">País:</label>
                         <br>
                         <select id="country" name="country">
                             <option value="australia">Australia</option>
@@ -80,7 +80,7 @@
                     </div>
                     <br>
                     <div class="form-group">
-                        <label for="city">Ciudad:</label>
+                        <label style="font-family:Impact" for="city">Ciudad:</label>
                         <br>
                         <select id="city" name="city">
                             <option value="quito">Quito</option>
