--- a/people/src/vistas/configuracion_usuario.html
+++ b/people/src/vistas/configuracion_usuario.html
@@ -37,7 +37,7 @@
                     <a class="nav-link" style="height: 45px;font-size: 30px;color:rgb(247, 247, 247);" href="#">Contraseña</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" style="height: 45px;font-size: 30px;color:rgb(247, 247, 247);" href="./pagina2.html">Perfíl</a>
+                    <a class="nav-link" style="height: 45px;font-size: 30px;color:rgb(247, 247, 247);" href="./profile.html">Perfíl</a>
                 </li>
                                 <br>
 
