--- a/people/src/vistas/register.html
+++ b/people/src/vistas/register.html
@@ -7,20 +7,105 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>foutos art</title>
     <link rel="stylesheet" href="../public/css/Global.css">
+    <link rel="stylesheet" href="../public/css/menu.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glider-js@1.7.3/glider.min.css">
 <link rel="stylesheet" href="../public/css/register_style.css">
 </head>
+<header>
+    <div class="Bar_menu">
+        <div class="picture">
+            <a href="../vistas/inicio.html"> <img src="/people/src/public/img/foutos.png" alt="foto" height="40px"></a>
+        </div>
+        <div class="central">
+            <div>
+                <a href="../vistas/comunidad.html"><button>Comunidad</button></a>
+                <button> Trending</button>
+                <button> category</button>
+            </div>
+        </div>
+        <a href="">
+            <div class="login">
+                <div>
+                    <h2>asdasd</h2>
+                </div>
+                <div> <img src="https://storage.googleapis.com/uscimages/account.png" alt="" height="35px"></div>
+
+
+
+            </div>
+        </a>
+        <div class="slider_one">
+            <div>
+                <a href="">2D</a>
+
+            </div>
+            <div>
+                <a href="">olio</a>
+
+            </div>
+            <div>
+                <a href="">3D</a>
+
+            </div>
+            <div>
+                <a href="">retrato</a>
+
+            </div>
+            <div>
+                <a href="">animales</a>
+
+            </div>
+            <div>
+                <a href="">Mitologia</a>
+
+            </div>
+        </div>
+        <div class="slider_two">
+            <div>
+                <a href="../vistas/profile.html">usuario</a>
+
+            </div>
+            <div>
+                <a href="../vistas/configuracion_usuario.html">configuracion</a>
+
+            </div>
+            <div>
+                <a href="../vistas/subir_imagen.html">upload</a>
+
+            </div>
+            <div>
+                <a href="">mis fotos</a>
+
+            </div>
+            <div>
+                <a href="">cuentas</a>
+
+            </div>
+            <div>
+                <a href="">cerrar secion </a>
+
+            </div>
+        </div>
+
+    </div>
+</header>
 
 <body>
-    
-    <header>
-    
 
-
-    </header>
-<
+    <div class="logo">
+        <img src="../public/img/logo.png"width = "900px" alt="">
+    </div>
 <br>
-    <div class="container">
+<div class="container"> 
+    <div class="container_vacio">
+
+    </div>
+
+    <div class="container_fotos">
+        <img src="../public/img/imagen2.jpg "width= "400px"  alt="">
+
+    </div>
+    <div class="container_formulario">
         <form action="" class="formulario2">
             <img src="#" alt="">
             <div class="titulo">
@@ -77,42 +162,8 @@
             </div>
         </form>
     </div>
-
-    <div class="carrusel_cont">
-        <button aria-label="anterior" class="carusser_anterior">
-            <p><</p>
-        </button>
-        <button aria-label="siguiente" class="carusser_siguiente">
-            <p>></p>
-        </button>
-
-        <div class="caruserl_lista">
-            <div class="carrusel_element">
-                <img src="../public/img/imagen1.jpg" alt="">
-            </div>
-            <div class="carrusel_element">
-                <img src="../public/img/imagen 3.png" alt="">
-            </div>
-            <div class="carrusel_element">
-                <img src="../public/img/imagen4.jpeg" alt="">
-            </div>
-            <div class="carrusel_element">
-                <img src="../public/img/imagen2.jpg" alt="">
-            </div>
-            <div class="carrusel_element">
-                <img src="../public/img/imagen4.jpeg" alt="">
-            </div>
-            <div class="carrusel_element">
-                <img src="../public/img/imagen 3.png" alt="">
-            </div>
-
-
-        </div>
-
-    </div>
-    <div role="tablist" class="carusel_ind"></div>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/glider-js@1.7.3/glider.min.js"></script>
+   
 <script src="../public/js/register.js"></script>
 
 
