--- a/people/src/vistas/menu.html
+++ b/people/src/vistas/menu.html
@@ -19,10 +19,10 @@
         </div>
         <div class="central">
             <div>
-                <a href="../vistas/comunidad.html"><button>Comunidad</button></a>
-                <button> Trending</button>
+                <a href="../vistas/comunidad.html"><button class="central_buton">Comunidad</button></a>
+                <button class="central_buton"> Trending</button>
                 
-                <button type="" id="pen-clo"> category></button>
+                <button type="" id="pen-clo" class="central_buton"> Category</button>
                 
             </div>
         </div>
